# cpp-primer-answer-and-practices

./: README.md  file1.txt
Chapter 10/10_12/: CMakeLists.txt  Sales_data.h  main.cpp
Chapter 10/10_13/: CMakeLists.txt  main.cpp
Chapter 10/10_17/: CMakeLists.txt  Sales_data.h  main.cpp
Chapter 10/10_1_and_2/: CMakeLists.txt  main.cpp
Chapter 10/10_20/: CMakeLists.txt  main.cpp
Chapter 10/10_21/: CMakeLists.txt  main.cpp
Chapter 10/10_22_25/: CMakeLists.txt  main.cpp
Chapter 10/10_29_32/: CMakeLists.txt  main.cpp
Chapter 10/10_3/: CMakeLists.txt  main.cpp
Chapter 10/10_42/: CMakeLists.txt  main.cpp
Chapter 10/10_6/: CMakeLists.txt  main.cpp
Chapter 10/11_3_4/: CMakeLists.txt  main.cpp
Chapter 10/11_9/: CMakeLists.txt  article.txt  main.cpp  words appear times.txt
Chapter 10/lambda_practice/: CMakeLists.txt  main.cpp
Chapter 10/practice10/: CMakeLists.txt  main.cpp
Chapter 11/11_12/: CMakeLists.txt  main.cpp
Chapter 11/11_23/: CMakeLists.txt  main.cpp
Chapter 11/11_28/: CMakeLists.txt  main.cpp
Chapter 11/11_31/: CMakeLists.txt  (+1 more)
Chapter8/: file1.txt  people.txt
Project1/: Person.h  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Sales_data.cpp  Sales_data.h  headers.h  main.cpp
QtWidgetsApplication1/: QtWidgetsApplication1.sln  QtWidgetsApplication1.vcxproj
clion1/: CMakeLists.txt  data.txt  headers.h  main.cpp
clion1/Sales_data/: Person.cpp  Person.h  Sales_data.h
clion1/cpp/: Person.cpp  Sales_data.cpp  Screen.cpp  Window_mgr.cpp  main.cpp
clion1/h/: Person.h  Sales_data.h  Screen.h  Window_mgr.h  headers.h
(+68 files in other folders)
